# SpinWcore

./: .gitignore  CMakeLists.txt  FindMKL.cmake  Hspinw.cpp  Hspinw.h  README.md  SpinW.cbp  cmake_install.cmake  spinw.cpp  spinw.h  spinw_external.cpp  sw_additions.cpp  sw_additions.h  sw_helper.h
include/: Hspinw.h  atom.h  intmatrix.h  magstr.h  ndmat.h  spinw.h  spinw_external.h  spinwave.h  sw_additions.h  sw_structs.h  symmetryDat.h  symop.h  templateFuncs.h
include/helper/: Hspinw.h
include/swsym/: swsym.h
src/: Hspinw.cpp  atom.cpp  intmatrix.cpp  magstr.cpp  ndmat.tpp  spinw.cpp  spinw_external.cpp  spinwave.cpp  sw_additions.cpp  symop.cpp  templateFuncs.cpp  templateFuncs.tpp
src/helper/: Hspinw.cpp
src/swsym/: swsym.cpp
swsym/: bond.cpp  bond.m.hpp
swsym/include/: bond.h  oporder.h  position.h  swsym.h  symOperator.h
swsym/src/: bond.cpp  oporder.cpp  position.cpp  swsym.cpp  symOperator.cpp
tests/: CMakeLists.txt  MATLAB_test.m  MATLAB_test_BD.m  symTest.m
tests/additions/: CMakeLists.txt  additionsTest.cpp  ndmatTest.cpp
tests/spinw_core/: CMakeLists.txt  swcore_atom.cpp  swcore_intmatrix.cpp
tests/swsym/: CMakeLists.txt  swsymTest.cpp  symTest.m
tests/templates/: CMakeLists.txt  templateTest.cpp
